@@ -1535,7 +1535,10 @@ fi
 dnl Provide configure switches and initialize clooginc & clooglibs
 dnl with user input.
 CLOOG_INIT_FLAGS
-if test "x$with_cloog" != "xno"; then
+if test "x$isllibs" = x && test "x$islinc" = x; then
+  clooglibs=
+  clooginc=
+elif test "x$with_cloog" != "xno"; then
   dnl The minimal version of CLooG required for Graphite.
   dnl
   dnl If we use CLooG-Legacy, the provided version information is
@@ -1545,6 +1548,12 @@ if test "x$with_cloog" != "xno"; then
   dnl Only execute fail-action, if CLooG has been requested.
   CLOOG_IF_FAILED([
     AC_MSG_ERROR([Unable to find a usable CLooG.  See config.log for details.])])
+fi
+
+# If either the ISL or the CLooG check failed, disable builds of in-tree
+# variants of both
+if test "x$clooglibs" = x && test "x$clooginc" = x; then
+  noconfigdirs="$noconfigdirs cloog isl"
 fi
 
 # Check for LTO support.
