@@ -1,3 +1,7 @@
+2012-07-03  Richard Guenther  <rguenther@suse.de>
+
+	* cloog.m4: Remove debugging print.
+
 2012-07-03  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	* isl.m4 (ISL_CHECK_VERSION): Add -lisl to LIBS, not LDFLAGS.
